--- a/MediaMagicTest/StoryBoards/Base.lproj/Main.storyboard
+++ b/MediaMagicTest/StoryBoards/Base.lproj/Main.storyboard
@@ -1,24 +1,114 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="I8J-KC-ZgT">
+    <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Navigation Controller-->
+        <scene sceneID="z7m-zK-07t">
+            <objects>
+                <navigationController id="I8J-KC-ZgT" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5ub-hv-5Eu">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="osl-iF-f1P"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="7JA-Ps-SqR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-614" y="122"/>
+        </scene>
+        <!--HomeVC-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeVC" id="BYZ-38-t0r" customClass="HomeVC" customModule="MediaMagicTest" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" xcode11CocoaTouchSystemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="kTF-g3-ufh">
+                                <rect key="frame" x="0.0" y="88" width="414" height="808"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="0.0" minimumInteritemSpacing="0.0" id="brc-KO-JSk">
+                                    <size key="itemSize" width="262" height="272"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="HomeCollectionViewCell" id="ZvM-H5-E0V" customClass="HomeCollectionViewCell" customModule="MediaMagicTest" customModuleProvider="target">
+                                        <rect key="frame" x="76" y="0.0" width="262" height="272"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sGl-zP-Mdy">
+                                            <rect key="frame" x="0.0" y="0.0" width="262" height="272"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jQI-5x-YNt">
+                                                    <rect key="frame" x="10" y="10" width="242" height="252"/>
+                                                    <subviews>
+                                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EPm-zO-gnl">
+                                                            <rect key="frame" x="5" y="5" width="232" height="211.5"/>
+                                                        </imageView>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="247" verticalHuggingPriority="246" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pgc-vn-aWd">
+                                                            <rect key="frame" x="5" y="221.5" width="232" height="20.5"/>
+                                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                                    <constraints>
+                                                        <constraint firstItem="pgc-vn-aWd" firstAttribute="leading" secondItem="jQI-5x-YNt" secondAttribute="leading" constant="5" id="57J-nN-ycm"/>
+                                                        <constraint firstItem="EPm-zO-gnl" firstAttribute="leading" secondItem="jQI-5x-YNt" secondAttribute="leading" constant="5" id="9Fh-YA-Ji0"/>
+                                                        <constraint firstAttribute="trailing" secondItem="EPm-zO-gnl" secondAttribute="trailing" constant="5" id="K83-c4-nLk"/>
+                                                        <constraint firstAttribute="trailing" secondItem="pgc-vn-aWd" secondAttribute="trailing" constant="5" id="Ped-Dq-nrc"/>
+                                                        <constraint firstItem="EPm-zO-gnl" firstAttribute="top" secondItem="jQI-5x-YNt" secondAttribute="top" constant="5" id="WEf-wC-1sP"/>
+                                                        <constraint firstAttribute="bottom" secondItem="pgc-vn-aWd" secondAttribute="bottom" constant="10" id="Y2y-u3-15e"/>
+                                                        <constraint firstItem="pgc-vn-aWd" firstAttribute="top" secondItem="EPm-zO-gnl" secondAttribute="bottom" constant="5" id="oLG-gq-xGt"/>
+                                                    </constraints>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="jQI-5x-YNt" firstAttribute="leading" secondItem="sGl-zP-Mdy" secondAttribute="leading" constant="10" id="20u-on-JH6"/>
+                                                <constraint firstAttribute="bottom" secondItem="jQI-5x-YNt" secondAttribute="bottom" constant="10" id="24f-Wc-OmY"/>
+                                                <constraint firstAttribute="trailing" secondItem="jQI-5x-YNt" secondAttribute="trailing" constant="10" id="ezp-QE-UzT"/>
+                                                <constraint firstItem="jQI-5x-YNt" firstAttribute="top" secondItem="sGl-zP-Mdy" secondAttribute="top" constant="10" id="j1z-Xk-VNf"/>
+                                            </constraints>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="262" height="272"/>
+                                        <connections>
+                                            <outlet property="authorImageView" destination="EPm-zO-gnl" id="gOy-TY-5l4"/>
+                                            <outlet property="authorNameLabel" destination="pgc-vn-aWd" id="h6F-ES-ssJ"/>
+                                            <outlet property="containerView" destination="jQI-5x-YNt" id="HuK-42-xTh"/>
+                                        </connections>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="kTF-g3-ufh" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="8jZ-xo-sl1"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="kTF-g3-ufh" secondAttribute="trailing" id="RiD-si-ixj"/>
+                            <constraint firstItem="kTF-g3-ufh" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="WnP-3O-4Tf"/>
+                            <constraint firstAttribute="bottom" secondItem="kTF-g3-ufh" secondAttribute="bottom" id="v6z-if-f4B"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" id="DFF-2K-StF"/>
+                    <connections>
+                        <outlet property="collectionView" destination="kTF-g3-ufh" id="1H4-Or-Gqf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="140.57971014492756" y="121.875"/>
         </scene>
     </scenes>
 </document>
